# VolumeRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  VulkanTest  compile_shaders.sh  main.cpp  papers_used.txt
.cache/clangd/index/: AST.FromFile.cpp.ABBBE8C83F0E3666.idx  BaseTypes.h.47251F7D15539C9D.idx  BuiltInResource.FromFile.cpp.CCA16AD0CC401352.idx  CodeGen.cpp.ADD07055C973933D.idx  Common.cpp.1A28FFD2BB3A5B8C.idx  Common.h.CB7E48EEF72095C6.idx  Config.FromFile.cpp.B3B8007E06D08E43.idx  Constant.cpp.1BAB5FBCF8321E42.idx  ConstantUnion.h.6710313C17D7C975.idx  DirStackFileIncluder.h.475A08EE14C9B55A.idx  GLSL.ext.AMD.h.C4112F5B33FE37F9.idx  GLSL.ext.EXT.h.53DC9B6C04FAAEAD.idx  GLSL.ext.KHR.h.5D52C240AC7BBB33.idx  GLSL.ext.NV.h.27AC07D90A5D2C37.idx  GLSL.std.450.h.A5B61E12140248C6.idx  GlslMapIO.FromFile.cpp.D3179B7C926FE6CF.idx  GlslangToSpv.cpp.47287EC0B1E58854.idx  GlslangToSpv.h.9F1C6CD969441C47.idx  HexFloat.cpp.91D18BE4BB73B985.idx  Hlsl.FromFile.cpp.EBE48FF00884E3D9.idx  InReadableOrder.cpp.E8CA33AAF5F47BBD.idx  InfoSink.cpp.AB92268D30D79759.idx  InfoSink.h.9DA09688F32BF9D9.idx  Initialize.cpp.6EC6C3DDBFF48867.idx  Initialize.h.CDB93693287520D7.idx  InitializeDll.cpp.3DC8E1DDAA73735B.idx  InitializeDll.h.1EA56EAD021C511B.idx  InitializeGlobals.h.85C6B36FB8017A98.idx  Initializer.h.F42DD088BF7C7D36.idx  IntermTraverse.cpp.76AEC23F79B016C9.idx  Intermediate.cpp.FAF91D218CFE6C6E.idx  Link.FromFile.Vk.cpp.6B4C6F3B58CC32D3.idx  Link.FromFile.cpp.7F84FBD5FC3ACC95.idx  Link.cpp.3A75CFE32DF03F88.idx  LiveTraverser.h.F20240972E35636D.idx  Logger.cpp.F964F75186B554E3.idx  Logger.h.E4E7771FABF940C4.idx  NonSemanticDebugPrintf.h.CA81931BD476BC49.idx  NonSemanticShaderDebugInfo100.h.4B92F8E0ED42AA9F.idx  ParseContextBase.cpp.C1D98054DFD02E5A.idx  (+140 more)
include/: happly.h
include/stb/: CMakeLists.txt
src/RenderEngine/: Camera.cpp  Camera.hpp  Geometry.cpp  Geometry.hpp  Mesh.cpp  Mesh.hpp  ONode.cpp  ONode.hpp  Octree.cpp  Octree.hpp  RenderEngine.cpp  RenderEngine.hpp  Texture.cpp  Texture.hpp  TexturePool.cpp  TexturePool.hpp  TransferFunction.cpp  TransferFunction.hpp  Utils.cpp  Utils.hpp  Voxelizer.cpp  Voxelizer.hpp  Window.cpp  Window.hpp
src/Shaders/: debug.frag  debug.vert  default.frag  default.vert  voxel.frag  voxel.geom  voxel.vert
src/Vulkan/: Buffer.cpp  Buffer.hpp  CommandPool.cpp  CommandPool.hpp  Device.cpp  Device.hpp  Image.cpp  Image.hpp  ImageView.cpp  ImageView.hpp  Instance.cpp  Instance.hpp  Pipeline.cpp  Pipeline.hpp  RenderPass.cpp  RenderPass.hpp  ShaderModule.cpp  ShaderModule.hpp  Swapchain.cpp  Swapchain.hpp
src/core/: Renderer.cpp  Renderer.hpp  Vertex.cpp  Vertex.hpp  Vulkan.cpp  Vulkan.hpp  VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanCommandBufferHandler.cpp  VulkanCommandBufferHandler.hpp  VulkanDescriptorSetHandler.cpp  VulkanDescriptorSetHandler.hpp  VulkanDescriptorSetLayout.cpp  VulkanDescriptorSetLayout.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanFence.cpp  VulkanFence.hpp  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.hpp  VulkanInstance.cpp  VulkanInstance.hpp  VulkanRenderPass.cpp  VulkanRenderPass.hpp  VulkanSemaphore.cpp  VulkanSemaphore.hpp  VulkanSurface.cpp  VulkanSurface.hpp  VulkanSwapChain.cpp  VulkanSwapChain.hpp  VulkanTexture.cpp  VulkanTexture.hpp
src/engine/: Engine.hpp  Model.cpp  Model.hpp  Octree.cpp  Octree.hpp  OctreeNode.cpp  OctreeNode.hpp  Transform.cpp  Transform.hpp  Voxelizer.cpp  Voxelizer.hpp
src/render_engine/: Camera.cpp  Camera.hpp  RenderEngine.cpp  RenderEngine.hpp  Window.cpp  Window.hpp
src/shaders/: frag.frag  frag.spv  frag_octree_raytracing.frag  frag_raymarch.frag  frag_raymarch.spv  frag_texture.frag  vert.spv  vert.vert  vert_raymarch.spv  vert_raymarch.vert
vtk/: volume.py
